--- a/index.html
+++ b/index.html
@@ -1,1 +1,44 @@
+<!DOCTYPE html>
+<!-- Created By CodingLab - www.codinglabweb.com -->
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8" />
+    <!--------- <title>Responsive Navigation Menu</title>------>
+    <link rel="stylesheet" href="index_style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  </head>
+  <body>
+    <!--====== Header Section Start ======-->
+    <header>
+      <nav class="navigation">
+        <!-- Logo -->
+        <div class="logo">
+          <img src="img/Logo.png" alt="" style="height: 100px; width: 100px" />
+        </div>
 
+        <!-- Navigation -->
+        <ul class="menu-list">
+          <li><a href="about.html">About</a></li>
+          <li><a href="#">Event</a></li>
+          <li><a href="#">Gallery</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+
+        <div class="humbarger">
+          <div class="bar"></div>
+          <div class="bar2 bar"></div>
+          <div class="bar"></div>
+        </div>
+      </nav>
+    </header>
+  </body>
+  <script
+    language="JavaScript"
+    type="text/javascript"
+    src="index_script.js"
+  ></script>
+</html>
