--- a/index.html
+++ b/index.html
@@ -1,44 +1,41 @@
 <!DOCTYPE html>
-<!-- Created By CodingLab - www.codinglabweb.com -->
-<html lang="en" dir="ltr">
+<html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <!--------- <title>Responsive Navigation Menu</title>------>
-    <link rel="stylesheet" href="index_style.css" />
+    <meta charset="UTF-8" />
     <link
+      href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css"
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
     />
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!--Style Sheet-->
+    <link rel="stylesheet" href="index_style.css" />
+    <title>Otaku Haven</title>
   </head>
+
   <body>
-    <!--====== Header Section Start ======-->
+    <!--Navbar-->
     <header>
-      <nav class="navigation">
-        <!-- Logo -->
-        <div class="logo">
-          <img src="img/Logo.png" alt="" style="height: 100px; width: 100px" />
-        </div>
+      <a href="#" class="logo">
+        <img src="img/Logo.png" alt="" />
+      </a>
+      <ul class="navbar">
+        <li><a href="#">Events</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Gallery</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
 
-        <!-- Navigation -->
-        <ul class="menu-list">
-          <li><a href="about.html">About</a></li>
-          <li><a href="#">Event</a></li>
-          <li><a href="#">Gallery</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-
-        <div class="humbarger">
-          <div class="bar"></div>
-          <div class="bar2 bar"></div>
-          <div class="bar"></div>
-        </div>
-      </nav>
+      <div class="main">
+        <i class="ri-menu-4-line" id="menu-icon"></i>
+      </div>
     </header>
+    <!--Slider-->
+    <!--About Us-->
+    <!--Contact Us-->
+    <!--JavaScript-->
+    <script src="index_script.js"></script>
   </body>
-  <script
-    language="JavaScript"
-    type="text/javascript"
-    src="index_script.js"
-  ></script>
 </html>
