--- a/index.html
+++ b/index.html
@@ -33,9 +33,34 @@
       </div>
     </header>
     <!--Slider-->
+    <div class="slider">
+      <figure>
+        <img src="img/placeholder.png" alt />
+        <img src="img/Logo.png" alt />
+        <img src="img/placeholder.png" alt />
+        <img src="img/Logo.png" alt />
+        <!--<img src="austin-fireworks.jpg" alt />-->
+      </figure>
+    </div>
     <!--About Us-->
+    <section class="about" id="aboutus">
+      <h3>About Us</h3>
+      <div class="flex-container">
+        <div class="flex-child text">
+            A person who motivates others in the achievement of personal
+            objectives such as improving relationships, setting goals, and
+            determining priorities.
+        </div>
+        <div class="flex-child logo">
+          <img src="img/Logo.png" alt="" />
+        </div>
+      </div>
+    </section>
     <!--Contact Us-->
+    <section class="contact" id="ContactUs">
+    </section>
     <!--JavaScript-->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-element-bundle.min.js"></script>
     <script src="index_script.js"></script>
   </body>
 </html>
