Contact us and About Us

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
       <h3>About Us</h3>
       <div class="flex-container">
         <div class="flex-child text">
-            A person who motivates others in the achievement of personal
-            objectives such as improving relationships, setting goals, and
-            determining priorities.
+          A person who motivates others in the achievement of personal
+          objectives such as improving relationships, setting goals, and
+          determining priorities.
         </div>
         <div class="flex-child logo">
           <img src="img/Logo.png" alt="" />
@@ -58,6 +58,27 @@
     </section>
     <!--Contact Us-->
     <section class="contact" id="ContactUs">
+      <h3 class="contact">Contact US</h3>
+      <form>
+        <input
+          name="name"
+          type="text"
+          class="feedback-input"
+          placeholder="Name"
+        />
+        <input
+          name="email"
+          type="text"
+          class="feedback-input"
+          placeholder="Email"
+        />
+        <textarea
+          name="text"
+          class="feedback-input"
+          placeholder="Comment"
+        ></textarea>
+        <input type="submit" value="SUBMIT" />
+      </form>
     </section>
     <!--JavaScript-->
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-element-bundle.min.js"></script>
